# pdq-rs

./: .dockerignore  Cargo.toml  Dockerfile.componentize  README.md  build-wasm.sh  build.rs  update_vendor.sh
benches/: pdq.rs
examples/: hash_image.rs
src/: lib.rs  wit.rs
wit/: pdq.wit
