[package]
name = "pdq-rs"
version = "1.0.0"
edition = "2024"
description = "Rust bindings for Facebook's PDQ image hashing library"
license = "MIT"
readme = "README.md"
keywords = ["pdq", "image-hashing", "perceptual-hashing", "bindings"]
categories = ["api-bindings", "computer-vision", "encoding"]
repository = "https://github.com/giddyos/pdq-rs"
exclude = ["ThreatExchange/*"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wit = ["dep:wit-bindgen"]

[dependencies]
image = "0.25.10"
wit-bindgen = { version = "0.55", optional = true, features = ["macros"] }


[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "pdq"
harness = false

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0"
